--- a/2017/2017-09/2017-09-15/source/300x600.css
+++ b/2017/2017-09/2017-09-15/source/300x600.css
@@ -339,6 +339,44 @@
   }
 }
 
+/*-- fade in right --*/
+@-webkit-keyframes fadeInRight {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(-50%, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeInRight {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(-50%, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInRight {
+  0%   {
+    visibility: visible;
+    transform: translate(-50%, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+
 
 /*-------------------------------------------*/
 * {
@@ -603,10 +641,10 @@
 }
 .frame2-logo-text {
   background: url('./images/300x600_frame2_logo_text.png') no-repeat center center;
-  width: 223px;
-  height: 176px;
-  left: 39px;
-  bottom: 34px;
+  width: 202px;
+  height: 142px;
+  left: 49px;
+  bottom: 88px;
 
   -webkit-animation: fadeInUp 0.75s ease-in-out 12.25s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 12.25s forwards;
@@ -622,4 +660,16 @@
   -webkit-animation: fadeInUp 0.75s ease-in-out 12.25s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 12.25s forwards;
   animation: fadeInUp 0.75s ease-in-out 12.25s forwards;
+}
+
+.frame2-cta {
+  background: url('./images/300x600_frame2_cta.png') no-repeat center center;
+  width: 135px;
+  height: 32px;
+  left: 83px;
+  bottom: 39px;
+
+  -webkit-animation: fadeInRight 0.75s ease-in-out 13.25s forwards;
+  -moz-animation: fadeInRight 0.75s ease-in-out 13.25s forwards;
+  animation: fadeInRight 0.75s ease-in-out 13.25s forwards;
 }
