--- a/2017/2017-10/2017-10-05/source/160x600.css
+++ b/2017/2017-10/2017-10-05/source/160x600.css
@@ -662,12 +662,33 @@
   background: url('./images/160x600_car2.png') no-repeat center center;
   width: 126px;
   height: 96px;
-  top: 236px;
-  left: 15px;
+  top: 0px;
+  left: 0px;
 
   -webkit-animation: carLeftDriveIn 0.5s ease-in 4s forwards;
   -moz-animation: carLeftDriveIn 0.5s ease-in 4s forwards;
   animation: carLeftDriveIn 0.5s ease-in 4s forwards;
+}
+.car2-2-2 {
+  width: 126px;
+  height: 96px;
+  top: 236px;
+  left: 15px;
+
+  -webkit-animation: carLeftDriveOut 0.5s ease-in-out 5s forwards;
+  -moz-animation: carLeftDriveOut 0.5s ease-in-out 5s forwards;
+  animation: carLeftDriveOut 0.5s ease-in-out 5s forwards;
+}
+.car2-3 {
+  background: url('./images/160x600_car2.png') no-repeat center center;
+  width: 126px;
+  height: 96px;
+  top: 236px;
+  left: 15px;
+
+  -webkit-animation: carLeftDriveIn 0.5s ease-in 6s forwards;
+  -moz-animation: carLeftDriveIn 0.5s ease-in 6s forwards;
+  animation: carLeftDriveIn 0.5s ease-in 6s forwards;
 }
 .car3-container {
   -webkit-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
@@ -689,12 +710,33 @@
   background: url('./images/160x600_car3.png') no-repeat center center;
   width: 125px;
   height: 85px;
-  top: 195px;
-  left: 15px;
+  top: 0px;
+  left: 0px;
 
   -webkit-animation: carLeftDriveIn 0.5s ease-in 4.5s forwards;
   -moz-animation: carLeftDriveIn 0.5s ease-in 4.5s forwards;
   animation: carLeftDriveIn 0.5s ease-in 4.5s forwards;
+}
+.car3-2-2 {
+  width: 125px;
+  height: 85px;
+  top: 195px;
+  left: 15px;
+
+  -webkit-animation: carLeftDriveOut 0.5s ease-in-out 5.5s forwards;
+  -moz-animation: carLeftDriveOut 0.5s ease-in-out 5.5s forwards;
+  animation: carLeftDriveOut 0.5s ease-in-out 5.5s forwards;
+}
+.car3-3 {
+  background: url('./images/160x600_car3.png') no-repeat center center;
+  width: 125px;
+  height: 85px;
+  top: 195px;
+  left: 15px;
+
+  -webkit-animation: carLeftDriveIn 0.5s ease-in 6.5s forwards;
+  -moz-animation: carLeftDriveIn 0.5s ease-in 6.5s forwards;
+  animation: carLeftDriveIn 0.5s ease-in 6.5s forwards;
 }
 .text {
   background: url('./images/160x600_text.png') no-repeat center center;
