--- a/2017/2017-10/2017-10-17/source/v1/728x90.css
+++ b/2017/2017-10/2017-10-17/source/v1/728x90.css
@@ -323,11 +323,11 @@
   }
 }
 
-/*-- fade in left 100 --*/
-@-webkit-keyframes fadeInLeft100 {
+/*-- fade in left --*/
+@-webkit-keyframes fadeInLeft {
   0%   {
     visibility: visible;
-    -webkit-transform: translate(100%, 0);
+    -webkit-transform: translate(10px, 0);
     opacity: 0;
   }
   100% { 
@@ -336,10 +336,10 @@
     opacity: 1;
   }
 }
-@-moz-keyframes fadeInLeft100 {
+@-moz-keyframes fadeInLeft {
   0%   {
     visibility: visible;
-    -moz-transform: translate(100%, 0);
+    -moz-transform: translate(10px, 0);
     opacity: 0;
   }
   100% { 
@@ -348,10 +348,10 @@
     opacity: 1;
   }
 }
-@keyframes fadeInLeft100 {
+@keyframes fadeInLeft {
   0%   {
     visibility: visible;
-    transform: translate(100%, 0);
+    transform: translate(10px, 0);
     opacity: 0;
   }
   100% { 
@@ -453,8 +453,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 600px;
+  width: 728px;
+  height: 90px;
   display: block;
 }
 
@@ -492,100 +492,43 @@
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
-.frame1-image {
-  background: url('./images/300x600_frame1_image.jpg') no-repeat center center;
+.bg {
+  background: url('./images/728x90_bg.jpg') no-repeat center center;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-.frame1-text {
-  background: url('./images/300x600_frame1_text.png') no-repeat center center;
-  width: 240px;
-  height: 69px;
-  top: 287px;
-  left: 30px;
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-}
 .cta {
-  background: url('./images/300x600_cta.png') no-repeat center center;
-  width: 300px;
-  height: 40px;
+  background: url('./images/728x90_cta.png') no-repeat center center;
+  width: 145px;
+  height: 90px;
   bottom: 0px;
-  right: 0px;
+  right: 0;
 
-  -webkit-animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeInLeft 0.75s ease-in-out 1s forwards;
+  -moz-animation: fadeInLeft 0.75s ease-in-out 1s forwards;
+  animation: fadeInLeft 0.75s ease-in-out 1s forwards;
 }
-.frame1-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 4.5s forwards;
-}
-.frame2-image {
-  background: url('./images/300x600_frame2_image.jpg') no-repeat center center;
+.logo {
+  background: url('./images/728x90_logo.png') no-repeat center center;
+  width: 181px;
+  height: 45px;
+  top: 23px;
+  left: 18px;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 5s forwards;
-  animation: fadeIn 0.75s ease-in-out 5s forwards;
+  -webkit-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  -moz-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  animation: fadeInRight100 0.75s ease-in-out 2s forwards;
 }
-.frame2-icon {
-  background: url('./images/300x600_frame2_icon.png') no-repeat center center;
-  width: 190px;
-  height: 174px;
-  top: 225px;
-  left: 54px;
+.text {
+  background: url('./images/728x90_text.png') no-repeat center center;
+  width: 221px;
+  height: 42px;
+  top: 24px;
+  right: 163px;
 
-  -webkit-animation: fadeInZoomIn 0.75s ease-in-out 5.75s forwards;
-  -moz-animation: fadeInZoomIn 0.75s ease-in-out 5.75s forwards;
-  animation: fadeInZoomIn 0.75s ease-in-out 5.75s forwards;
-}
-.frame2-text {
-  background: url('./images/300x600_frame2_text.png') no-repeat center center;
-  width: 253px;
-  height: 33px;
-  top: 298px;
-  left: 22px;
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
-}
-.frame2-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 8.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 8.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 8.5s forwards;
-}
-.frame3-image {
-  background: url('./images/300x600_frame3_image.jpg') no-repeat center center;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-}
-.frame3-logo1 {
-  background: url('./images/300x600_frame3_logo1.png') no-repeat center center;
-  width: 92px;
-  height: 15px;
-  top: 7px;
-  left: 9px;
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 9.5s forwards;
-}
-.frame3-logo2 {
-  background: url('./images/300x600_frame3_logo2.png') no-repeat center center;
-  width: 82px;
-  height: 14px;
-  top: 4px;
-  right: 6px;
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 9.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 9.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 9.75s forwards;
+  -webkit-animation: fadeInLeft 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInLeft 0.75s ease-in-out 3s forwards;
+  animation: fadeInLeft 0.75s ease-in-out 3s forwards;
 }
