--- a/2017/2017-10/2017-10-25/source/728x90.css
+++ b/2017/2017-10/2017-10-25/source/728x90.css
@@ -518,8 +518,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 250px;
+  width: 728px;
+  height: 90px;
   display: block;
 }
 
@@ -558,42 +558,34 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .border {
-  background: url('./images/300x250_border.png') no-repeat center center; 
+  background: url('./images/728x90_border.png') no-repeat center center; 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  z-index: 10;
 }
 .bg {
-  background: url('./images/300x250_bg.jpg') no-repeat center center;
+  background: url('./images/728x90_bg.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
   -moz-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
   animation: fadeIn 0.25s ease-in-out 1.5s forwards;
 }
 .frame2 {
-  background: url('./images/300x250_frame2.png') no-repeat center center;
-  -webkit-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
-  -moz-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
-  animation: fadeIn 0.25s ease-in-out 1.5s forwards;
-}
-.footer {
-  background: url('./images/300x250_footer.png') no-repeat center center;
-  width: 300px;
-  height: 34px;
-  bottom: 0px;
-  left: 0px;
+  background: url('./images/728x90_frame2.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
   -moz-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
   animation: fadeIn 0.25s ease-in-out 1.5s forwards;
 }
 .logo {
-  background: url('./images/300x250_logo.png') no-repeat center center;
-  width: 240px;
-  height: 53px;
-  right: 10px;
-  bottom: 6px;
-  -webkit-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
-  -moz-animation: fadeIn 0.25s ease-in-out 1.5s forwards;
-  animation: fadeIn 0.25s ease-in-out 1.5s forwards;
+  background: url('./images/728x90_logo.png') no-repeat center center;
+  width: 88px;
+  height: 88px;
+  right: 0px;
+  bottom: 1px;
+  z-index: 5;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .cover-container {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
@@ -601,7 +593,7 @@
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .cover-bg {
-  background: url('./images/300x250_cover.jpg') no-repeat center center;
+  background: url('./images/728x90_cover.jpg') no-repeat center center;
   -webkit-animation: fadeOut 0.01s ease-in-out 2.5s forwards;
   -moz-animation: fadeOut 0.01s ease-in-out 2.5s forwards;
   animation: fadeOut 0.01s ease-in-out 2.5s forwards;
@@ -609,21 +601,11 @@
 .cover-up-container {
 }
 .cover-up {
-  background: url('./images/300x250_cover_up.png') no-repeat center center;
+  background: url('./images/728x90_cover_up.png') no-repeat center center;
 
-  -webkit-transform-origin: 300px 0;
-  -moz-transform-origin: 300px 0;
-  transform-origin: 300px 0;
-  -webkit-animation: coverUpGo 0.75s linear 3s forwards;
-  -moz-animation: coverUpGo 0.75s linear 3s forwards;
-  animation: coverUpGo 0.75s linear 3s forwards;
-}
-.cover-down {
-  background: url('./images/300x250_cover_down.png') no-repeat center center;
-
-  -webkit-transform-origin: 0 250px;
-  -moz-transform-origin: 0 250px;
-  transform-origin: 0 250px;
+  -webkit-transform-origin: 728px 0;
+  -moz-transform-origin: 728px 0;
+  transform-origin: 728px 0;
   -webkit-animation: coverUpGo 0.75s linear 3s forwards;
   -moz-animation: coverUpGo 0.75s linear 3s forwards;
   animation: coverUpGo 0.75s linear 3s forwards;
@@ -631,10 +613,10 @@
 .cover-middle-container {
 }
 .cover-middle {
-  background: url('./images/300x250_cover_middle.png') no-repeat center center;
-  -webkit-transform-origin: 0 50px;
-  -moz-transform-origin: 0 50px;
-  transform-origin: 0 50px;
+  background: url('./images/728x90_cover_middle.png') no-repeat center center;
+  -webkit-transform-origin: 0 55px;
+  -moz-transform-origin: 0 55px;
+  transform-origin: 0 55px;
   -webkit-animation: startScratchCover 0.5s ease-in-out 2.5s forwards;
   -moz-animation: startScratchCover 0.5s ease-in-out 2.5s forwards;
   animation: startScratchCover 0.5s ease-in-out 2.5s forwards;
@@ -646,7 +628,7 @@
   animation: fadeOut 0.75s ease-in-out 5.5s forwards;
 }
 .frame3 {
-  background: url('./images/300x250_frame3.png') no-repeat center center;
+  background: url('./images/728x90_frame3.png') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 6s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 6s forwards;
   animation: fadeIn 0.75s ease-in-out 6s forwards;
